Bug #24878 mysql server doesn't log incident time in "mysqld got signal 11" error messages
Submitted: 7 Dec 2006 10:04 Modified: 15 Mar 2007 5:38
Reporter: Hartmut Holzgraefe
Status: Closed
Category:Server: General Severity:S3 (Non-critical)
Version:4.1, 5.0 OS:*nix
Assigned to: Magnus Svensson Target Version:

[7 Dec 2006 10:04] Hartmut Holzgraefe
Description:
mysqld writes a rather long error message on crash bugs
(or more general: on catching unexpected signals not
otherwise handled), but its impossible to tell the 
exact time of a crash as this information is *not* 
logged (unlike most other error messages written to
the log)

One can only roughly guess the time from the following

  YYMMDD hh:mm:ss  mysqld restarted

message, assuming that mysqld got restarted by 
mysqld_safe right after the crash

How to repeat:
on linux do "killall -11 mysqld" and check the log

Suggested fix:
Add a regular "YYMMDD hh:mm:ss" prefix to "mysql got signal #" as with every other logged
error message
[19 Feb 2007 14:43] Magnus Svensson
070219 17:42:13 - mysqld got signal 11;
This could be because you hit a bug. It is also possible that this binary
or one of the libraries it was linked against is corrupt, improperly built,
[28 Feb 2007 16:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/20788

ChangeSet@1.2612, 2007-02-28 16:37:50+01:00, msvensson@pilot.blaudden +1 -0
  Bug#24878 mysql server doesn't log incident time in "mysqld got signal 11" error
messages
   - Add printout of current time when mysqld is killed by an
     unhandled signal
[8 Mar 2007 21:16] Tim Smith
pushed to 4.1.23, 5.0.38, 5.1.17
[15 Mar 2007 5:38] Paul DuBois
Noted in 4.1.23, 5.0.38, 5.1.17 changelogs.

The server now includes a timestamp in error messages logged as a
result of unhandled signals (such as mysqld got signal 11 messages).