Bug#24878 mysql server doesn't log incident time in "mysqld got signal 11" error messages  - Add printout of current time when mysqld is killed by an    unhandled signal

sql/mysqld.cc:
  Add printout of current time before the "mysqld got signal %d" message
  Hopefully we don't crash in the calls to 'time' or 'localtime_r'
  but if that should start to happen we can move the printout of
  time further down. At least it's now below the check for segfault
  inside of segfault handler.